readme update, parameter validation class